--- a/client/FinalSchedule.html
+++ b/client/FinalSchedule.html
@@ -15,17 +15,15 @@
 
 
 <template name="classes">
-  <form class="DayofWeekForm">
+  <form class="DayofWeekandClassTime">
           <input type="checkbox" name="Monday" value="Monday"> Monday <br>
           <input type="checkbox" name="Tuesday" value="Tuesday" > Tuesday <br>
           <input type="checkbox" name="Wednesday" value="Wednesday" > Wednesday <br>
           <input type="checkbox" name="Thursday" value="Thursday" > Thursday <br>
           <input type="checkbox" name="Friday" value="Friday"> Friday <br>
           <input type="checkbox" name="SatSun" value="Saturday/Sunday"> Saturday/Sunday <br>
-          <button> Submit </button>
-  </form>
 
-  <form class="ClassTimeForm">
+
     <select name= "ClassTimeForm" >
             <option value="8:00am"> 8:00am </option>
             <option value="8:30am"> 8:30am </option>
@@ -47,8 +45,10 @@
             <option value="4:30pm"> 4:30pm </option>
            <option value="5:00pm"> 5:00pm </option>
             <option value="After 5pm"> After 5pm </option>
-          </select>
-          <button> Submit </button>
+      </select>
+
+    <button> Submit </button>
+
     </form>
 
 
